force-app/main/default/objects/Certified_Employee__c/Certified_Employee__c.object-meta.xml
<CustomObject>
    <label>Certified Employee</label>
    <nameField>
        <label>Certified Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certified Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>