force-app/main/default/objects/Certified_Employee__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <referenceTo>SDO_ChannelPartner_Certification__c</referenceTo>
    <relationshipLabel>Certified Employees</relationshipLabel>
    <relationshipName>Certified_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>