force-app/main/default/objects/Certified_Employee__c/validationRules/Edit_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Access</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $User.Id &lt;&gt; CreatedBy.Id,
    $UserRole.Name &lt;&gt; &quot;Manager&quot;
)</errorConditionFormula>
    <errorMessage>Only Owner/Manager can edit this record.</errorMessage>
</ValidationRule>